--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>교민의 첫 웹사이트</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>안녕하세요! 저는 구교민입니다 🧑‍💻</h1>
