유튜브 영상 추가

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>교민의 첫 웹사이트</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>안녕하세요! 저는 구교민입니다 🧑‍💻</h1>
     <p>이건 제 첫 GitHub Pages 웹사이트입니다.</p>
+
+    <h2>🎵 감성 플레이리스트</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pcjR7EHyiaE" 
+            frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
