오디오 및 커리어 섹션 위치 수정

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
-<h2>🏆 나의 커리어</h2>
-<div class="gallery">
-  <figure>
-    <img src="images/pubg_gamescom_win.jpg" alt="Gamescom Invitational Solo Winner" />
-    <figcaption>2017 PUBG Gamescom Invitational Solo Winner</figcaption>
-  </figure>
-  <figure>
-    <img src="images/pubg_asia_win.jpg" alt="PUBG Asia Duo Champion" />
-    <figcaption>2017 PUBG Asia Invitational Duo Winner</figcaption>
-  </figure>
-  <figure>
-    <img src="images/pubg_600k_team.jpg" alt="600K Showdown Winner" />
-    <figcaption>PGI Showdown – 1st Place ($600,000)</figcaption>
-  </figure>
-  <figure>
-    <img src="images/ogn_supermatch.jpg" alt="OGN Supermatch" />
-    <figcaption>Seoul Cup OGN Supermatch Champion</figcaption>
-  </figure>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>교민의 첫 웹사이트</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>안녕하세요! 저는 구교민입니다 🧑‍💻</h1>
+    <p>이건 제 첫 GitHub Pages 웹사이트입니다.</p>
+
+    <h2>🎵 감성 플레이리스트</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pcjR7EHyiaE" 
+            frameborder="0" allowfullscreen></iframe>
+
+    <h2>🏆 나의 커리어</h2>
+    <div class="gallery">
+      <figure>
+        <img src="images/pubg_gamescom_win.jpg" alt="Gamescom Invitational Solo Winner" />
+        <figcaption>2017 PUBG Gamescom Invitational Solo Winner</figcaption>
+      </figure>
+      <figure>
+        <img src="images/pubg_asia_win.jpg" alt="PUBG Asia Duo Champion" />
+        <figcaption>2017 PUBG Asia Invitational Duo Winner</figcaption>
+      </figure>
+      <figure>
+        <img src="images/pubg_600k_team.jpg" alt="600K Showdown Winner" />
+        <figcaption>PGI Showdown – 1st Place ($600,000)</figcaption>
+      </figure>
+      <figure>
+        <img src="images/ogn_supermatch.jpg" alt="OGN Supermatch" />
+        <figcaption>Seoul Cup OGN Supermatch Champion</figcaption>
+      </figure>
+    </div>
+
+    <audio controls autoplay loop>
+      <source src="music.mp3" type="audio/mpeg" />
+      브라우저가 오디오를 지원하지 않아요.
+    </audio>
+  </body>
+</html>
