커리어 사진 1장 추가

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <img src="images/ogn_supermatch.jpg" alt="OGN Supermatch" onclick="openLightbox(this.src)" />
         <figcaption>Seoul Cup OGN Supermatch Champion</figcaption>
       </figure>
+      <figure>
+        <img src="images/overwatch_5k.jpg" alt="overwatch 5k" onclick="openLightbox(this.src)" />
+        <figcaption>overwatch rank 5000 No1</figcaption>
+      </figure>
     </div>
 
     <audio controls autoplay loop>
