이미지 확대 효과를 더 고급스럽고 안정적으로

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <h2>🏆 나의 커리어</h2>
     <div class="gallery">
       <figure>
-        <img src="images/pubg_gamescom_win.jpg" alt="Gamescom Invitational Solo Winner" onclick="openLightbox(this.src)" />
+        <div class="img-wrapper">
+    <img src="images/pubg_gamescom_win.jpg" alt="..." onclick="openLightbox(this.src)" />
+  </div>
         <figcaption>2017 PUBG Gamescom Invitational Solo Winner</figcaption>
       </figure>
       <figure>
