--- a/index.html
+++ b/index.html
@@ -54,23 +54,48 @@
         <div class="img-wrapper">
     <img src="images/pubg_gamescom_win.jpg" alt="..." onclick="openLightbox(this.src)" />
   </div>
-        <figcaption>2017 PUBG Gamescom Invitational Solo Winner</figcaption>
+        <figcaption>2017 PUBG Gamescom Invitational Solo Winner
+           <div class="like-box">
+      <button class="like-btn" data-id="like1">❤️</button>
+      <span class="like-count" id="like1">0</span>
+    </div>
+        </figcaption>
       </figure>
       <figure>
         <img src="images/pubg_asia_win.jpg" alt="PUBG Asia Duo Champion" onclick="openLightbox(this.src)" />
-        <figcaption>2017 PUBG Asia Invitational Duo Winner</figcaption>
+        <figcaption>2017 PUBG Asia Invitational Duo Winner
+           <div class="like-box">
+      <button class="like-btn" data-id="like2">❤️</button>
+      <span class="like-count" id="like2">0</span>
+    </div>
+        </figcaption>
       </figure>
       <figure>
         <img src="images/pubg_600k_team.jpg" alt="600K Showdown Winner" onclick="openLightbox(this.src)" />
-        <figcaption>PGI Showdown – 1st Place ($600,000)</figcaption>
+        <figcaption>PGI Showdown – 1st Place ($600,000)
+           <div class="like-box">
+      <button class="like-btn" data-id="like3">❤️</button>
+      <span class="like-count" id="like3">0</span>
+    </div>
+        </figcaption>
       </figure>
       <figure>
         <img src="images/ogn_supermatch.jpg" alt="OGN Supermatch" onclick="openLightbox(this.src)" />
-        <figcaption>Seoul Cup OGN Supermatch Champion</figcaption>
+        <figcaption>Seoul Cup OGN Supermatch Champion
+           <div class="like-box">
+      <button class="like-btn" data-id="like4">❤️</button>
+      <span class="like-count" id="like4">0</span>
+    </div>
+        </figcaption>
       </figure>
       <figure>
         <img src="images/overwatch_5k.jpg" alt="overwatch 5k" onclick="openLightbox(this.src)" />
-        <figcaption>overwatch rank 5000 No1</figcaption>
+        <figcaption>overwatch rank 5000 No1
+           <div class="like-box">
+      <button class="like-btn" data-id="like5">❤️</button>
+      <span class="like-count" id="like5">0</span>
+    </div>
+        </figcaption>
       </figure>
     </div>
 
@@ -116,6 +141,23 @@
         currentIndex = (currentIndex + 1) % images.length;
         document.getElementById('lightbox-img').src = images[currentIndex].src;
       }
+        // ❤️ 좋아요 버튼 기능
+  document.querySelectorAll('.like-btn').forEach(btn => {
+    const id = btn.dataset.id;
+    const countEl = document.getElementById(id);
+    const saved = localStorage.getItem(id) || 0;
+    countEl.textContent = saved;
+
+    btn.addEventListener('click', () => {
+      let current = parseInt(localStorage.getItem(id) || 0);
+      current += 1;
+      localStorage.setItem(id, current);
+      countEl.textContent = current;
+
+      btn.disabled = true;
+      btn.classList.add('clicked');
+    });
+  });
     </script>
   </body>
 </html>
