--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
       <img id="lightbox-img" src="" alt="확대 이미지" />
       <button id="nextBtn" onclick="nextImage(event)">&#10095;</button>
     </div>
+    <footer>
+  방문자 수: <span id="visitor-count">로딩 중...</span>
+</footer>
 
     <script>
       const images = Array.from(document.querySelectorAll('.gallery img'));
@@ -157,6 +160,11 @@
       btn.disabled = true;
       btn.classList.add('clicked');
     });
+  });
+  fetch('https://api.countapi.xyz/hit/kookyomin1.github.io/visits')
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById('visitor-count').textContent = data.value;
   });
     </script>
   </body>
