--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <img id="lightbox-img" src="" alt="확대 이미지" />
       <button id="nextBtn" onclick="nextImage(event)">&#10095;</button>
     </div>
-    <footer>
-  방문자 수: <span id="visitor-count">로딩 중...</span>
+  <footer style="margin-top: 50px; text-align: center; color: #aaa;">
+  👁️ 방문자 수: <span id="visitor-count">로딩 중...</span>
 </footer>
 
     <script>
@@ -161,10 +161,14 @@
       btn.classList.add('clicked');
     });
   });
-  fetch('https://api.countapi.xyz/hit/kookyomin1.github.io/visits')
+ fetch('https://counterapi.dev/api/v1/hit/kookyomin1.github.io')
   .then(res => res.json())
   .then(data => {
     document.getElementById('visitor-count').textContent = data.value;
+  })
+  .catch(err => {
+    console.error('방문자 수를 불러오는 데 실패했습니다:', err);
+    document.getElementById('visitor-count').textContent = '오류';
   });
     </script>
   </body>
