--- a/frontend/index.html
+++ b/frontend/index.html
@@ -161,15 +161,14 @@
       btn.classList.add('clicked');
     });
   });
- fetch('https://counterapi.dev/api/v1/hit/kookyomin1.github.io')
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById('visitor-count').textContent = data.value;
-  })
-  .catch(err => {
-    console.error('방문자 수를 불러오는 데 실패했습니다:', err);
-    document.getElementById('visitor-count').textContent = '오류';
-  });
+   fetch('https://hello-node-0sgb.onrender.com')
+    .then(response => response.text())
+    .then(data => {
+      document.body.innerHTML = data;
+    })
+    .catch(error => {
+      console.error('서버 요청 실패:', error);
+    });
     </script>
   </body>
 </html>
