프론트에서 백엔드 fetch 연결 오류 수정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -114,6 +114,7 @@
   👁️ 방문자 수: <span id="visitor-count">로딩 중...</span>
 </footer>
 
+     <p id="response">응답 기다리는 중...</p>
     <script>
       const images = Array.from(document.querySelectorAll('.gallery img'));
       let currentIndex = 0;
