프론트에서 백엔드 fetch 연결 오류 수정2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,7 +162,7 @@
       btn.classList.add('clicked');
     });
   });
-   fetch('https://hello-node-0sgb.onrender.com')
+   fetch('https://hello-node-0sgb.onrender.com/')
     .then(response => response.text())
     .then(data => {
       document.body.innerHTML = data;
