--- a/frontend/index.html
+++ b/frontend/index.html
@@ -162,7 +162,7 @@
       btn.classList.add('clicked');
     });
   });
-  fetch('https://hello-node-0sgb.onrender.com')
+  fetch('https://hello-node-0sgb.onrender.com/')
   .then(res => res.text()) // ← JSON이 아니라 텍스트로 받아야 함
   .then(data => {
     document.getElementById('response').textContent = data;
