마지막 수정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -154,7 +154,7 @@
       btn.classList.add('clicked');
     });
   });
- fetch('https://hello-node-0sgb.onrender.com')
+ fetch('https://hello-node-0sgb.onrender.com/')
   .then(res => res.text())
   .then(data => {
     document.getElementById('response').textContent = data;
